fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@
 
 body {
   line-height: 1.5;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
 }
 
